--- a/RoutApp_v2/index.html
+++ b/RoutApp_v2/index.html
@@ -207,8 +207,7 @@
                 <!-- Dados da Empresa -->
                 <div class="col-md-6">
                     <p><strong>Endereço:</strong> QS 07 - Lote 01 - EPCT - Taguatinga, Brasília/DF - CEP: 71966-700</p>
-                    <p><strong>Telefone:</strong> (61) 9 XXXX-XXXX</p>
-                    <p><strong>Email:</strong> contato@routapp.com</p>
+                    <p><strong>Email:</strong> routapp2@routapp.com</p>
                     <p><strong>Horário de Funcionamento:</strong> Seg - Sex: 9h - 18h</p>
                 </div>
 
