--- a/RoutApp_v2/index.html
+++ b/RoutApp_v2/index.html
@@ -14,8 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="Imagem 04.jfif" alt="Logo RoutApp" style="height: 120px; width: auto;">
-                RoutApp
+                <img src="Imagem 04.png" alt="Logo RoutApp" style="height: 120px; width: auto;">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -27,7 +26,8 @@
                     <li class="nav-item"><a class="nav-link" href="#beneficios">Benefícios</a></li>
                     <li class="nav-item"><a class="nav-link" href="#problemas">Problemas</a></li>
                     <li class="nav-item"><a class="nav-link" href="#solucao">Solução</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#mercado">Potencial de Mercado</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#mercado">Potencial</a></li>
+					<li class="nav-item"><a class="nav-link" href="#contato">Preço</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
                 </ul>
             </div>
@@ -42,7 +42,7 @@
         <h2 class="text-center">RoutApp</h2>
         <p class="text-center">Veja como o RoutApp pode transformar suas operações logísticas.</p>
         <div class="text-center">
-            <img src="imagem 01.jfif" alt="Apresentação RoutApp" class="img-fluid" style="max-width: 60%; height: auto;">
+               <video src="RoutApp.mp4" autoplay loop muted style="height: 700px; width: auto;">
         </div>
     </div>
 </section>
@@ -188,7 +188,7 @@
     <!-- Seção Potencial de Mercado -->
     <section id="mercado" class="py-5" style="background-color: #F1EFEF;">
         <div class="container">
-            <h2 class="text-center">Potencial de Mercado</h2>
+            <h2 class="text-center">Potencial</h2>
             <p class="text-center">O mercado de logística está em constante crescimento, e o RoutApp se posiciona como uma solução inovadora:</p>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><i class="fas fa-chart-line text-success"></i> O aumento do e-commerce tem impulsionado a demanda por soluções logísticas eficientes.</li>
@@ -199,8 +199,57 @@
             </ul>
         </div>
     </section>
+	
+	    <!-- Seção Preço-->
+<section class="pricing-section">
+        <div class="container">
+            <h2>Escolha o Plano Ideal para Você</h2>
+            <p>Planos personalizados para atender suas necessidades</p>
+            
+            <div class="pricing-cards">
+                <!-- Plano Básico -->
+                <div class="pricing-card">
+                    <h3>Básico</h3>
+                    <p class="price">R$40<span>/mês</span></p>
+                    <p class="description">Ideal para pequenos negócios que estão começando.</p>
+                    <ul class="features">
+                        <li>Até 100 rotas por mês</li>
+                        <li>Suporte via e-mail</li>
+                        <li>Acesso a relatórios básicos</li>
+                    </ul>
+                </div>
+
+                <!-- Plano Pro -->
+                <div class="pricing-card">
+                    <h3>Pro</h3>
+                    <p class="price">R$264<span>/semestral</span></p>
+                    <p class="description">Perfeito para empresas de médio porte.</p>
+                    <ul class="features">
+                        <li>Até 500 rotas por mês</li>
+                        <li>Suporte via e-mail e chat</li>
+                        <li>Relatórios detalhados</li>
+                        <li>Integração com sistemas externos</li>
+                    </ul>
+                </div>
+
+                <!-- Plano Empresarial -->
+                <div class="pricing-card">
+                    <h3>Empresarial</h3>
+                    <p class="price">R$552<span>/anual</span></p>
+                    <p class="description">Para empresas grandes que precisam de soluções avançadas.</p>
+                    <ul class="features">
+                        <li>Rotas ilimitadas</li>
+                        <li>Suporte prioritário 24/7</li>
+                        <li>Relatórios avançados e análise de dados</li>
+                        <li>Consultoria personalizada</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+	
     <!-- Seção Contato -->
-<section id="contato" style="background-color: #CECECE;">
+<section id="contato" style="background-color: #F1EFEF;">
         <div class="container">
             <h2 class="text-center">Dados da Empresa</h2>
             <div class="row">
