--- a/RoutApp_v2/index.html
+++ b/RoutApp_v2/index.html
@@ -256,7 +256,7 @@
                 <!-- Dados da Empresa -->
                 <div class="col-md-6">
                     <p><strong>Endereço:</strong> QS 07 - Lote 01 - EPCT - Taguatinga, Brasília/DF - CEP: 71966-700</p>
-                    <p><strong>Email:</strong> routapp2@routapp.com</p>
+                    <p><strong>Email:</strong> routapp2@gmail.com</p>
                     <p><strong>Horário de Funcionamento:</strong> Seg - Sex: 9h - 18h</p>
                 </div>
 
